# SLM_Cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  slm_cli.py
examples/: smart_home_demo.py
tests/: test_slm_cli.py
